Update test.md